--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "readmeFilename": "README.md",
   "gitHead": "4d1ceb455e7591f389ac94844b77cc5f9b1a17e9",
   "dependencies": {
-    "machine-code": "~1.0.0"
+    "machine-code": "~1.0.0",
+    "dot": "~1.0.2"
   }
 }
